--- a/worker/build.gradle
+++ b/worker/build.gradle
@@ -26,6 +26,10 @@ jar {
     manifest {
         attributes 'Main-Class': 'ru.nsu.nikolotov.crackhash.worker.WorkerApplication'
     }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 dependencies {
