--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,70 @@ services:
     ports:
       - "8080:8080"
     environment:
-      hashcracker.worker-address : http://worker:8081
+      spring.rabbitmq.addresses : ds-rabbitmq:5672
+      spring.data.mongodb.uri : mongodb://mongo1:27017,mongo2:27018,mongo3:27019/test
+      hashcracker.workers-amount : 3
+    networks:
+      - crack-hash-net
+
   worker:
-    container_name: worker
     image: crackhash-worker:latest
     environment:
-      hashcracker.manager-address : http://manager:8080
+      spring.rabbitmq.addresses: ds-rabbitmq:5672
+    networks:
+      - crack-hash-net
+    deploy:
+      replicas: 3
+
+
+  ds-rabbitmq:
+    container_name: ds-rabbitmq
+    image: rabbitmq:3.9.14-management
+    ports:
+      - "15672:15672"
+      - "5672:5672"
+    networks:
+      - crack-hash-net
+
+
+  mongo1:
+    container_name: mongo1
+    image: mongo:4.4
+    volumes:
+      - ./scripts/rs-init.sh:/scripts/rs-init.sh
+      - ./scripts/init.js:/scripts/init.js
+    networks:
+      - crack-hash-net
+    ports:
+      - 27017:27017
+    depends_on:
+      - mongo2
+      - mongo3
+    links:
+      - mongo2
+      - mongo3
+    restart: always
+    entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "dbrs" ]
+
+  mongo2:
+    container_name: mongo2
+    image: mongo:4.4
+    networks:
+      - crack-hash-net
+    ports:
+      - 27018:27017
+    restart: always
+    entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "dbrs" ]
+  mongo3:
+    container_name: mongo3
+    image: mongo:4.4
+    networks:
+      - crack-hash-net
+    ports:
+      - 27019:27017
+    restart: always
+    entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "dbrs" ]
+
+networks:
+  crack-hash-net:
+    driver: bridge
