--- a/worker/build.gradle
+++ b/worker/build.gradle
@@ -35,6 +35,7 @@ jar {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -49,6 +50,8 @@ dependencies {
     xsd2java "com.sun.xml.bind:jaxb-core:3.0.2"
     xsd2java "com.sun.activation:jakarta.activation:2.0.1"
     xsd2java "jakarta.xml.bind:jakarta.xml.bind-api:3.0.1"
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 }
 
 task xsd2java() {
