--- a/worker/src/main/resources/application.yml
+++ b/worker/src/main/resources/application.yml
@@ -11,6 +11,6 @@ spring:
       simple:
         max-concurrency: 1
         concurrency: 1
-        acknowledge-mode: auto
+        acknowledge-mode: manual
         default-requeue-rejected: false
         prefetch: 1
